Bug 363032. invalid arg assertion in nsFrameList.cpp. Patch by Alex Vincent <ajvincent@gmail.com>. r=enndeakin, sr=neil